--- a/gtk/resources/theme/HighContrast/gtk.css
+++ b/gtk/resources/theme/HighContrast/gtk.css
@@ -1468,18 +1468,17 @@ GtkCheckButton.text-button, GtkRadioButton.text-button {
   -GtkRange-slider-width: 20;
   -GtkRange-trough-border: 2;
   outline-offset: -9px;
-  outline-radius: 4px;
-  margin: 10px; }
+  outline-radius: 4px; }
   .scale.fine-tune,
   .scale.scale-has-marks-above.scale-has-marks-below.fine-tune,
   .scale.vertical.scale-has-marks-above.scale-has-marks-below.fine-tune {
-    margin: 8px;
     outline-offset: -7px;
     outline-radius: 6px; }
     .scale.fine-tune.trough,
     .scale.scale-has-marks-above.scale-has-marks-below.fine-tune.trough,
     .scale.vertical.scale-has-marks-above.scale-has-marks-below.fine-tune.trough {
-      border-radius: 4px; }
+      border-radius: 4px;
+      margin: 8px; }
   .scale.slider,
   .scale.scale-has-marks-above.scale-has-marks-below.slider,
   .scale.vertical.scale-has-marks-above.scale-has-marks-below.slider {
@@ -1532,6 +1531,7 @@ GtkCheckButton.text-button, GtkRadioButton.text-button {
   .scale.trough,
   .scale.scale-has-marks-above.scale-has-marks-below.trough,
   .scale.vertical.scale-has-marks-above.scale-has-marks-below.trough {
+    margin: 10px;
     border-width: 1px;
     border-style: solid;
     border-radius: 3px;
@@ -2181,5 +2181,3 @@ GtkColorChooserWidget #add-color-button {
     icon-shadow: none;
     border-color: transparent;
     transition-property: border, box-shadow, color; }
-
-/*# sourceMappingURL=gtk.css.map */
